--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: puppet-module-puppetlabs-ntp
-Maintainer: Puppet Package Maintainers <pkg-puppet-devel@lists.alioth.debian.org>
+Maintainer: Scibian Project <packaging@scibian.org> 
 Uploaders: Stig Sandbeck Mathisen <ssm@debian.org>,
            Thomas Bechtold <toabctl@debian.org>,
            Russ Allbery <rra@debian.org>
@@ -7,8 +7,8 @@ Section: admin
 Priority: optional
 Build-Depends: debhelper (>= 10)
 Standards-Version: 3.9.8
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-puppet/puppet-module-puppetlabs-ntp.git
-Vcs-Git: https://anonscm.debian.org/git/pkg-puppet/puppet-module-puppetlabs-ntp.git
+Vcs-Browser: https://github.com/scibian/puppet-module-puppetlabs-ntp
+Vcs-Git: https://github.com/scibian/puppet-module-puppetlabs-ntp.git
 Homepage: https://forge.puppet.com/puppetlabs/ntp
 
 Package: puppet-module-puppetlabs-ntp
