Change dependancies to : puppet4 | puppet-common (>= 3)
In scibian8 we have two versions of puppet : puppet v3.7
comes with the puppet-common package, and puppet v4.8 comes
with the puppet4 package.

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Homepage: https://forge.puppet.com/puppetlabs/ntp
 Package: puppet-module-puppetlabs-ntp
 Architecture: all
 Depends: ${misc:Depends},
-         puppet (>= 4) | puppet-common (>= 3),
+         puppet4 | puppet-common (>= 3),
          puppet-module-puppetlabs-stdlib
 Description: Puppet module for ntp
  Puppet lets you centrally manage every important aspect of your system
